# rust-bot

./: Cargo.toml  README.md  vercel.json
src/: index.rs  lib.rs  main.rs
src/components/: callback_handler.rs  command_handler.rs  get_random_character.rs  send_random_characters.rs
src/components/characters/: callback_handler.rs  command_handler.rs  get_random_character.rs  send_episode.rs  send_random_characters.rs
src/components/game/: trivia_game.rs
src/components/search/: character_search.rs
