[package]
name = "bot-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "sync"] }
dotenv = "0.15"
chrono = "0.4"
lazy_static = "1.4.0"
rand = "0.9.0"